@@ -1,3 +1,7 @@
+2004-03-03  ujwal
+
+	* Made application of transparency more consistent.
+
 2004-03-03  fabian
 
 	* Rewrite the selection code. Faster and more consistent.
